--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb+srv://vanshjais1777:6IJdYiyUYSrp52dM@cluster0.py4wgy5.mongodb.net/ToDo_DB?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://vanshjais1777:jnjqvs024DFLNPrD@cluster0.5ovmebw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
